Add: Leaf 이미지 추가 적용
- 텍스트 이미지 앞으로 나오는 문제 해결